# talondoc

./: .buildinfo  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  build.py  cheatsheet-dev.html  cheatsheet.css  cheatsheet.hmtl  cheatsheet.html  cheatsheet.md  cheatsheet.preamble.tex  cheatsheet.py  cheatsheet.talon  generate_talon_visitor.py  genindex.html  index.html  knausj_talon.json  knausj_talon.py_info.json  main.py  make.bat  objects.inv  package-lock.json  package.json  poetry.toml  preamble.tex  pyproject.toml  requirements-ci.txt  requirements-mypy.txt  requirements.txt  search.html  searchindex.js  setup.py  style.css  style.sass
.devcontainer/: devcontainer.json
.doctrees/: index.doctree
.doctrees/knausj_talon/: index.doctree  settings.doctree
.doctrees/knausj_talon/core/: edit_settings.doctree
.github/: CODEOWNERS  dependabot.yml
.github/actions/setup-python/: action.yml
.github/workflows/: build-doc.yml  build.yml  ci.yaml  ci.yml  release.yml
_sources/: index.md.txt  index.rst.txt
_sources/knausj_talon/: index.md.txt  index.rst.txt  settings.rst.txt
_sources/knausj_talon/apps/: conemu.rst.txt  file_manager.rst.txt  generic_browser.rst.txt  generic_debugger.rst.txt  talon_repl.rst.txt
_sources/knausj_talon/conftest/: api.rst.txt
_sources/knausj_talon/core/: edit_settings.md.txt  edit_settings.rst.txt
_sources/knausj_talon/draft_editor/: draft_editor.rst.txt  draft_editor_open.rst.txt
_sources/knausj_talon/emoji/: emoji.rst.txt
_sources/knausj_talon/eye_tracking_settings/: api.rst.txt
_sources/knausj_talon/misc/: abbreviate.rst.txt  cancel.rst.txt  chapters.rst.txt  datetimeinsert.rst.txt  desktops.rst.txt  edit_settings.rst.txt  extensions.rst.txt  formatters.rst.txt  git.rst.txt  git_add_patch.rst.txt  help.rst.txt  help_open.rst.txt  help_scope_open.rst.txt  history.rst.txt  keys.rst.txt  macro.rst.txt  media.rst.txt  messaging.rst.txt  microphone_selection.rst.txt  mouse.rst.txt  mouse_cursor.rst.txt  multiple_cursors.rst.txt  pages.rst.txt  repeater.rst.txt  screens.rst.txt  screenshot.rst.txt  splits.rst.txt  standard.rst.txt  tabs.rst.txt  talon_helpers.rst.txt  vocabulary.rst.txt  websites_and_search_engines.rst.txt  window_management.rst.txt
_sources/knausj_talon/modes/: dictation_mode.rst.txt  dragon_modes.rst.txt  language_modes.rst.txt  modes.rst.txt  sleep_mode.rst.txt  sleep_mode_wav2letter.rst.txt  wake_up.rst.txt
_sources/knausj_talon/mouse_grid/: mouse_grid.rst.txt  mouse_grid_always.rst.txt  mouse_grid_open.rst.txt
_sources/knausj_talon/shared_settings_module/: api.rst.txt
_sources/knausj_talon/talon_draft_window/: draft_global.rst.txt  draft_window.rst.txt  draft_window_open.rst.txt
_sources/knausj_talon/text/: find_and_replace.rst.txt  generic_editor.rst.txt  homophones.rst.txt  homophones_open.rst.txt  line_commands.rst.txt  numbers.rst.txt  symbols.rst.txt  text_navigation.rst.txt
_static/: bootstrap-sphinx.css  documentation_options.js
assets/css/: style.css
doc/: abc.py  html.py  tex.py
doc/talon_script/: describe.py  description.py  foldable.py  walker.py
example/: autogen.sh  build.sh
example/docs/: conf.py  index.md  index.rst
example/docs/pages/: test.rst
example/user/edit/: edit.linux.py  edit.mac.py  (+3 more)
george/: __init__.py  dependency_graph.py  tree_sitter.py
george/analysis/: info.py  python.py  talon.py
george/graph/: __init__.py
george/talon/: tree_sitter.py
george/tree_sitter/: node_types.py  talon.py  type_provider.py
george/types/: __init__.py  description.py  python.py
knausj_talon/: index.html  settings.html
knausj_talon/apps/: conemu.html  file_manager.html  generic_browser.html  generic_debugger.html  talon_repl.html
knausj_talon/conftest/: api.html
knausj_talon/core/: edit_settings.html
knausj_talon/draft_editor/: draft_editor.html  draft_editor_open.html
knausj_talon/emoji/: emoji.html
knausj_talon/eye_tracking_settings/: api.html
knausj_talon/misc/: abbreviate.html  cancel.html  chapters.html  datetimeinsert.html  desktops.html  edit_settings.html  extensions.html  formatters.html  git.html  git_add_patch.html  help.html  help_open.html  help_scope_open.html  history.html  keys.html  macro.html  media.html  messaging.html  microphone_selection.html  mouse.html  mouse_cursor.html  multiple_cursors.html  pages.html  repeater.html  screens.html  screenshot.html  splits.html  standard.html  tabs.html  talon_helpers.html  vocabulary.html  websites_and_search_engines.html  window_management.html
knausj_talon/modes/: dictation_mode.html  dragon_modes.html  language_modes.html  modes.html  sleep_mode.html  sleep_mode_wav2letter.html  wake_up.html
knausj_talon/mouse_grid/: mouse_grid.html  mouse_grid_always.html  mouse_grid_open.html
knausj_talon/shared_settings_module/: api.html
knausj_talon/talon_draft_window/: draft_global.html  draft_window.html  draft_window_open.html
knausj_talon/text/: find_and_replace.html  generic_editor.html  homophones.html  homophones_open.html  line_commands.html  numbers.html  symbols.html  text_navigation.html
old-cheatsheet/: .gitmodules  TODO.md  package-lock.json  package.json
old-cheatsheet/margaret/: cheatsheet.py
old-cheatsheet/sphinx_talon/: __init__.py
scripts/: build-doc  pyinstaller.sh
src/talondoc/: __init__.py  __main__.py  _cache_builtin.py  _version.py
talondoc/: __init__.py  entries.py  todo.py  types.py
talondoc/analyze/: __init__.py  entries.py  python.py  registry.py  talon.py
talondoc/autogen/: __init__.py
talondoc/autosummary/: generate.py
talondoc/cache_builtin/: __init__.py  cache.py
talondoc/data/: talon_actions_dict-0.3.1-437-g8fea.json
talondoc/description/: __init__.py  describer.py
talondoc/preprocessing/: builtin_extractor.py
talondoc/registry/: __init__.py  entries.py
talondoc/shims/: __init__.py  core.py  talon.py
talondoc/sphinx/: __init__.py  domains.py  typing.py
talondoc/types/: __init__.py
talondoc/util/: desc.py  desc_script.py  describer.py  nodes.py  progress_bar.py  typing.py
(+1642 files in other folders)
